--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
@@ -1,45 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<AnchorPane id="MainApp" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.MainAppUIController">
-
-        <VBox id="main_menu_pane" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
-
-                <HBox id="logo" fx:id="logoBox" prefHeight="100.0" prefWidth="200.0" alignment="CENTER"/>
-                <ToggleButton fx:id="btnImport" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Import">
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                </ToggleButton>
-                <ToggleButton fx:id="btnReports" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="262.0" mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Reports">
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                </ToggleButton>
-                <ToggleButton fx:id="btnSettings" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="363.0" mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Settings">
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                </ToggleButton>
-                <ToggleButton fx:id="btnBaseData" alignment="BASELINE_LEFT" mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Base Data">
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                </ToggleButton>
-
-        </VBox>
-        <SplitPane dividerPositions="0.1" layoutX="200.0" layoutY="50.0" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-
-                <TextArea id="messageBox" fx:id="messageBox" promptText="Messages" wrapText="true" />
-                <AnchorPane fx:id="contentPane" minHeight="200.0" minWidth="200.0" />
-
-        </SplitPane>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<AnchorPane id="MainApp" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.MainAppUIController">
+    <VBox id="main_menu_pane" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox id="logo" fx:id="logoBox" prefHeight="100.0" prefWidth="200.0" alignment="CENTER"/>
+        <ToggleButton fx:id="btnImport" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false"
+                      onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Import">
+            <padding>
+                <Insets left="20.0"/>
+            </padding>
+        </ToggleButton>
+        <ToggleButton fx:id="btnReports" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="262.0"
+                      mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button"
+                      text="Reports">
+            <padding>
+                <Insets left="20.0"/>
+            </padding>
+        </ToggleButton>
+        <ToggleButton fx:id="btnSettings" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="363.0"
+                      mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button"
+                      text="Settings">
+            <padding>
+                <Insets left="20.0"/>
+            </padding>
+        </ToggleButton>
+        <ToggleButton fx:id="btnBaseData" alignment="BASELINE_LEFT" mnemonicParsing="false"
+                      onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Base Data">
+            <padding>
+                <Insets left="20.0"/>
+            </padding>
+        </ToggleButton>
+    </VBox>
+    <SplitPane dividerPositions="0.1" layoutX="200.0" layoutY="50.0" orientation="VERTICAL"
+               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0"
+               AnchorPane.topAnchor="0.0">
+        <TextArea id="messageBox" fx:id="messageBox" promptText="Messages" wrapText="true"/>
+        <AnchorPane fx:id="contentPane" minHeight="200.0" minWidth="200.0"/>
+    </SplitPane>
 </AnchorPane>
