--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportInspectionDialog.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportInspectionDialog.fxml
@@ -1,15 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportInspectionDialogUIController">
-
-      <VBox AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0">
-
-            <HBox fx:id="resultPanelContainer" prefHeight="400.0" prefWidth="600.0" spacing="10.0" />
-
-      </VBox>
-
+<?xml version="1.0" encoding="UTF-8"?><?import javafx.scene.layout.AnchorPane?><?import javafx.scene.layout.HBox?><?import javafx.scene.layout.VBox?>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportInspectionDialogUIController">
+    <VBox AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+          AnchorPane.topAnchor="20.0">
+        <HBox fx:id="resultPanelContainer" prefHeight="400.0" prefWidth="600.0" spacing="10.0"/>
+    </VBox>
 </AnchorPane>
