--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportResultPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportResultPanel.fxml
@@ -1,29 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-
-<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportResultPanelUIController">
-
-      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-
-            <TableView fx:id="resultTable" VBox.vgrow="ALWAYS" />
-            <ButtonBar prefHeight="40.0">
-              <buttons>
-                <Button fx:id="exportButton" mnemonicParsing="false" onAction="#exportResultTable" text="Export" styleClass="button" />
-              </buttons>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets bottom="10.0" top="10.0" />
-               </VBox.margin>
-            </ButtonBar>
-
-      </VBox>
-
-</AnchorPane>
+<?xml version="1.0" encoding="UTF-8"?><?import javafx.geometry.Insets?><?import javafx.scene.control.Button?><?import javafx.scene.control.ButtonBar?><?import javafx.scene.control.TableView?><?import javafx.scene.layout.AnchorPane?><?import javafx.scene.layout.VBox?><AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportResultPanelUIController"><VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"><TableView fx:id="resultTable" VBox.vgrow="ALWAYS" /><ButtonBar prefHeight="40.0"><buttons><Button fx:id="exportButton" mnemonicParsing="false" onAction="#exportResultTable" text="Export" styleClass="button" /></buttons><padding><Insets right="10.0" /></padding><VBox.margin><Insets bottom="10.0" top="10.0" /></VBox.margin></ButtonBar></VBox></AnchorPane>
