Javadoc creation, updated createdatabasesql with admin user,

--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="BaseDataPanel" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.BaseDataPanelUIController">
+<AnchorPane id="BaseDataPanel" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.BaseDataPanelUIController">
     <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <Tab text="Users">
             <AnchorPane>
