--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportPanel.fxml
@@ -1,1 +1,148 @@
-<?xml version="1.0" encoding="UTF-8"?><?import javafx.geometry.Insets?><?import javafx.scene.control.Button?><?import javafx.scene.control.DatePicker?><?import javafx.scene.control.Label?><?import javafx.scene.control.TextField?><?import javafx.scene.control.TitledPane?><?import javafx.scene.layout.AnchorPane?><?import javafx.scene.layout.ColumnConstraints?><?import javafx.scene.layout.GridPane?><?import javafx.scene.layout.HBox?><?import javafx.scene.layout.RowConstraints?><?import javafx.scene.layout.VBox?><?import org.controlsfx.control.CheckComboBox?><AnchorPane id="ReportPanel" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportPanelUIController"><VBox prefHeight="543.2" prefWidth="624.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"><TitledPane text="Define report" VBox.vgrow="ALWAYS"><AnchorPane><VBox prefHeight="269.6" prefWidth="622.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"><GridPane minHeight="200.0" prefHeight="139.0" prefWidth="578.0"><columnConstraints><ColumnConstraints hgrow="NEVER" maxWidth="1.7976931348623157E308" prefWidth="110.0" /><ColumnConstraints hgrow="ALWAYS" prefWidth="120.0" /><ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="0.0" prefWidth="0.0" /><ColumnConstraints hgrow="NEVER" minWidth="10.0" /><ColumnConstraints hgrow="NEVER" maxWidth="1.7976931348623157E308" prefWidth="110.0" /><ColumnConstraints hgrow="ALWAYS" prefWidth="120.0" /></columnConstraints><rowConstraints><RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" /><RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" /><RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" /><RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" /><RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" /><RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" /></rowConstraints><HBox GridPane.columnIndex="1"><DatePicker fx:id="createdFrom" minWidth="-Infinity" prefWidth="105.0" styleClass="date-picker" /><TextField fx:id="createdFromTime" maxWidth="65.0" minWidth="-Infinity" prefWidth="70.0" promptText="hh:mm:ss"><HBox.margin><Insets left="5.0" /></HBox.margin></TextField><GridPane.margin><Insets top="2.0" /></GridPane.margin></HBox><HBox GridPane.columnIndex="5"><DatePicker fx:id="createdUpTo" minWidth="-Infinity" prefWidth="105.0" showWeekNumbers="true" styleClass="date-picker" /><TextField fx:id="createdUpToTime" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="70.0" promptText="hh:mm:ss"><HBox.margin><Insets left="5.0" /></HBox.margin></TextField><GridPane.margin><Insets top="2.0" /></GridPane.margin></HBox><HBox GridPane.columnIndex="1" GridPane.rowIndex="1"><DatePicker fx:id="loggedTimestampFrom" minWidth="-Infinity" prefWidth="105.0" showWeekNumbers="true" styleClass="date-picker" /><TextField fx:id="loggedTimestampFromTime" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="70.0" promptText="hh:mm:ss" ><HBox.margin><Insets left="5.0" /></HBox.margin></TextField><GridPane.margin><Insets top="2.0" /></GridPane.margin></HBox><HBox GridPane.columnIndex="5" GridPane.rowIndex="1"><DatePicker fx:id="loggedTimestampUpTo" minWidth="-Infinity" prefWidth="105.0" showWeekNumbers="true" styleClass="date-picker" /><TextField fx:id="loggedTimestampUpToTime" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="70.0" promptText="hh:mm:ss" ><HBox.margin><Insets left="5.0" /></HBox.margin></TextField><GridPane.margin><Insets top="2.0" /></GridPane.margin></HBox><Label styleClass="label" text="Created from" /><Label styleClass="label" text="Logged from" GridPane.rowIndex="1"><GridPane.margin><Insets /></GridPane.margin></Label><Label styleClass="label" text="User" GridPane.rowIndex="2" /><Label styleClass="label" text="Created until" GridPane.columnIndex="4" /><Label styleClass="label" text="Logged until" GridPane.columnIndex="4" GridPane.rowIndex="1" /><CheckComboBox fx:id="createdUser" minWidth="180.0" styleClass="combo-box" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" /><CheckComboBox fx:id="eventType" minWidth="180.0" styleClass="combo-box" GridPane.columnIndex="5" GridPane.rowIndex="2" /><Label styleClass="label" text="Record type" GridPane.columnIndex="4" GridPane.rowIndex="2" /><Label styleClass="label" text="Site" GridPane.rowIndex="3" /><Label styleClass="label" text="Message substring" GridPane.rowIndex="5" /><TextField fx:id="message" minWidth="-Infinity" prefWidth="180.0" GridPane.columnIndex="1" GridPane.rowIndex="5" /><Button defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#search" prefWidth="70.0" text="Search" GridPane.columnIndex="5" GridPane.halignment="LEFT" GridPane.rowIndex="5" /><CheckComboBox fx:id="site" minWidth="180.0" styleClass="combo-box" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" /><Label prefHeight="18.0" prefWidth="118.0" styleClass="label" text="Source" GridPane.rowIndex="4" /><Label text="BusLine" GridPane.columnIndex="4" GridPane.rowIndex="3" /><CheckComboBox fx:id="busLine" minWidth="180.0" styleClass="combo-box" GridPane.columnIndex="5" GridPane.rowIndex="3" /><Label styleClass="label" text="Address" GridPane.columnIndex="4" GridPane.rowIndex="4" /><TextField fx:id="address" maxWidth="-Infinity" prefWidth="180.0" promptText="0-127" GridPane.columnIndex="5" GridPane.rowIndex="4" /><CheckComboBox fx:id="source" minWidth="180.0" styleClass="combo-box" title="" GridPane.columnIndex="1" GridPane.rowIndex="4" /></GridPane><VBox fx:id="furtherAnalysisBox" alignment="BOTTOM_LEFT" prefHeight="50.0"><Label alignment="BOTTOM_LEFT" styleClass="title" text="Further analysis" /><HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="5.0"><Label styleClass="label" text="Seconds before" /><TextField fx:id="secondsBefore" prefWidth="50.0" text="10" /><Label styleClass="label" text="Seconds after" /><TextField fx:id="secondsAfter" prefWidth="50.0" text="0" /><Button mnemonicParsing="false" onAction="#inspectSelectedRecords" styleClass="button" text="Inspect..." /><opaqueInsets><Insets /></opaqueInsets><VBox.margin><Insets top="5.0" /></VBox.margin></HBox><VBox.margin><Insets top="10.0" /></VBox.margin></VBox></VBox></AnchorPane></TitledPane><TitledPane id="tp2" text="Report"><!-- fx:id must correspond (controller name without "Controller") with name of controller, see https://riptutorial.com/javafx/example/7285/nested-controllers--><fx:include fx:id="reportResultPanelUI" source="ReportResultPanel.fxml" /></TitledPane></VBox><VBox maxHeight="40.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" /><opaqueInsets><Insets /></opaqueInsets></AnchorPane>
+<?xml version="1.0" encoding="UTF-8"?><?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import org.controlsfx.control.*?>
+<AnchorPane id="ReportPanel" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportPanelUIController">
+    <VBox prefHeight="543.2" prefWidth="624.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <TitledPane text="Define report" VBox.vgrow="ALWAYS">
+            <AnchorPane>
+                <VBox prefHeight="269.6" prefWidth="622.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <GridPane minHeight="200.0" prefHeight="139.0" prefWidth="578.0">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="NEVER" maxWidth="1.7976931348623157E308" prefWidth="110.0"/>
+                            <ColumnConstraints hgrow="ALWAYS" prefWidth="120.0"/>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="0.0" prefWidth="0.0"/>
+                            <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+                            <ColumnConstraints hgrow="NEVER" maxWidth="1.7976931348623157E308" prefWidth="110.0"/>
+                            <ColumnConstraints hgrow="ALWAYS" prefWidth="120.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        </rowConstraints>
+                        <HBox GridPane.columnIndex="1">
+                            <DatePicker fx:id="createdFrom" minWidth="-Infinity" prefWidth="105.0"
+                                        styleClass="date-picker"/>
+                            <TextField fx:id="createdFromTime" maxWidth="65.0" minWidth="-Infinity" prefWidth="70.0"
+                                       promptText="hh:mm:ss">
+                                <HBox.margin>
+                                    <Insets left="5.0"/>
+                                </HBox.margin>
+                            </TextField>
+                            <GridPane.margin>
+                                <Insets top="2.0"/>
+                            </GridPane.margin>
+                        </HBox>
+                        <HBox GridPane.columnIndex="5">
+                            <DatePicker fx:id="createdUpTo" minWidth="-Infinity" prefWidth="105.0"
+                                        showWeekNumbers="true" styleClass="date-picker"/>
+                            <TextField fx:id="createdUpToTime" maxWidth="-Infinity" minWidth="-Infinity"
+                                       prefWidth="70.0" promptText="hh:mm:ss">
+                                <HBox.margin>
+                                    <Insets left="5.0"/>
+                                </HBox.margin>
+                            </TextField>
+                            <GridPane.margin>
+                                <Insets top="2.0"/>
+                            </GridPane.margin>
+                        </HBox>
+                        <HBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+                            <DatePicker fx:id="loggedTimestampFrom" minWidth="-Infinity" prefWidth="105.0"
+                                        showWeekNumbers="true" styleClass="date-picker"/>
+                            <TextField fx:id="loggedTimestampFromTime" maxWidth="-Infinity" minWidth="-Infinity"
+                                       prefWidth="70.0" promptText="hh:mm:ss">
+                                <HBox.margin>
+                                    <Insets left="5.0"/>
+                                </HBox.margin>
+                            </TextField>
+                            <GridPane.margin>
+                                <Insets top="2.0"/>
+                            </GridPane.margin>
+                        </HBox>
+                        <HBox GridPane.columnIndex="5" GridPane.rowIndex="1">
+                            <DatePicker fx:id="loggedTimestampUpTo" minWidth="-Infinity" prefWidth="105.0"
+                                        showWeekNumbers="true" styleClass="date-picker"/>
+                            <TextField fx:id="loggedTimestampUpToTime" maxWidth="-Infinity" minWidth="-Infinity"
+                                       prefWidth="70.0" promptText="hh:mm:ss">
+                                <HBox.margin>
+                                    <Insets left="5.0"/>
+                                </HBox.margin>
+                            </TextField>
+                            <GridPane.margin>
+                                <Insets top="2.0"/>
+                            </GridPane.margin>
+                        </HBox>
+                        <Label styleClass="label" text="Created from"/>
+                        <Label styleClass="label" text="Logged from" GridPane.rowIndex="1">
+                            <GridPane.margin>
+                                <Insets/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label styleClass="label" text="User" GridPane.rowIndex="2"/>
+                        <Label styleClass="label" text="Created until" GridPane.columnIndex="4"/>
+                        <Label styleClass="label" text="Logged until" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
+                        <CheckComboBox fx:id="createdUser" minWidth="180.0" styleClass="combo-box"
+                                       GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"/>
+                        <CheckComboBox fx:id="eventType" minWidth="180.0" styleClass="combo-box"
+                                       GridPane.columnIndex="5" GridPane.rowIndex="2"/>
+                        <Label styleClass="label" text="Record type" GridPane.columnIndex="4" GridPane.rowIndex="2"/>
+                        <Label styleClass="label" text="Site" GridPane.rowIndex="3"/>
+                        <Label styleClass="label" text="Message substring" GridPane.rowIndex="5"/>
+                        <TextField fx:id="message" minWidth="-Infinity" prefWidth="180.0" GridPane.columnIndex="1"
+                                   GridPane.rowIndex="5"/>
+                        <Button defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#search"
+                                prefWidth="70.0" text="Search" GridPane.columnIndex="5" GridPane.halignment="LEFT"
+                                GridPane.rowIndex="5"/>
+                        <CheckComboBox fx:id="site" minWidth="180.0" styleClass="combo-box" GridPane.columnIndex="1"
+                                       GridPane.hgrow="ALWAYS" GridPane.rowIndex="3"/>
+                        <Label prefHeight="18.0" prefWidth="118.0" styleClass="label" text="Source"
+                               GridPane.rowIndex="4"/>
+                        <Label text="Bus line" GridPane.columnIndex="4" GridPane.rowIndex="3"/>
+                        <CheckComboBox fx:id="busLine" minWidth="180.0" styleClass="combo-box" GridPane.columnIndex="5"
+                                       GridPane.rowIndex="3"/>
+                        <Label styleClass="label" text="Address" GridPane.columnIndex="4" GridPane.rowIndex="4"/>
+                        <TextField fx:id="address" maxWidth="-Infinity" prefWidth="180.0" promptText="0-127"
+                                   GridPane.columnIndex="5" GridPane.rowIndex="4"/>
+                        <CheckComboBox fx:id="source" minWidth="180.0" styleClass="combo-box" title=""
+                                       GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+                    </GridPane>
+                    <VBox fx:id="furtherAnalysisBox" alignment="BOTTOM_LEFT" prefHeight="50.0">
+                        <Label alignment="BOTTOM_LEFT" styleClass="title" text="Further analysis"/>
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                            <Label styleClass="label" text="Seconds before"/>
+                            <TextField fx:id="secondsBefore" prefWidth="50.0" text="10"/>
+                            <Label styleClass="label" text="Seconds after"/>
+                            <TextField fx:id="secondsAfter" prefWidth="50.0" text="0"/>
+                            <Button mnemonicParsing="false" onAction="#inspectSelectedRecords" styleClass="button"
+                                    text="Inspect..."/>
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                            <VBox.margin>
+                                <Insets top="5.0"/>
+                            </VBox.margin>
+                        </HBox>
+                        <VBox.margin>
+                            <Insets top="10.0"/>
+                        </VBox.margin>
+                    </VBox>
+                </VBox>
+            </AnchorPane>
+        </TitledPane>
+        <TitledPane id="tp2"
+                    text="Report"><!-- fx:id must correspond (controller name without "Controller") with name of controller, see https://riptutorial.com/javafx/example/7285/nested-controllers-->
+            <fx:include fx:id="reportResultPanelUI" source="ReportResultPanel.fxml"/>
+        </TitledPane>
+    </VBox>
+    <VBox maxHeight="40.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+    <opaqueInsets>
+        <Insets/>
+    </opaqueInsets>
+</AnchorPane>
